# innovate

./: .buildinfo  .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  abm_plot.py  abstract_v1_review.md  abstract_v2.md  abstract_v2_responses.md  agents.md  bayesian_fitter_issue.md  check_keyring.py  coverage.xml  create_diagram.py  gemini.md  genindex.html  index.html  innovate.abm.html  innovate.adopt.categorization.html  innovate.adopt.html  innovate.base.base.html  innovate.base.html  innovate.compete.competition.html  innovate.compete.html  innovate.compete.lotka_volterra.html  innovate.diffuse.bass.html  innovate.diffuse.gompertz.html  innovate.diffuse.html  innovate.diffuse.logistic.html  innovate.fail.analysis.html  innovate.fail.html  innovate.fitters.html  innovate.html  innovate.hype.delayed_hype_bass.html  innovate.hype.html  innovate.hype.hype_cycle.html  (+32 more)
.doctrees/: environment.pickle  index.doctree  innovate.abm.doctree  innovate.adopt.categorization.doctree  innovate.adopt.doctree  innovate.base.base.doctree  innovate.base.doctree  innovate.compete.competition.doctree  innovate.compete.doctree  innovate.compete.lotka_volterra.doctree  innovate.diffuse.bass.doctree  innovate.diffuse.doctree  innovate.diffuse.gompertz.doctree  innovate.diffuse.logistic.doctree  innovate.doctree  innovate.fail.analysis.doctree  innovate.fail.doctree  innovate.fitters.doctree  innovate.hype.delayed_hype_bass.doctree  innovate.hype.doctree  innovate.hype.hype_cycle.doctree  innovate.path_dependence.doctree  (+12 more)
(+267 files in other folders)
