[project]
name = "innovate"
version = "0.2.1"
description = "A Python library for simplifying innovation/policy diffusion modelling."
authors = [
    { name = "Dylan A Mordaunt", email = "dylan.mordaunt@vuw.ac.nz" }
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "statsmodels",
    "pyarrow",
    "jitcdde",
    "mesa",
    "networkx",
    "ruptures",
    "pymannkendall",
    "typing_extensions",
    "pytensor",
    "ndlib"
]
requires-python = ">=3.8"
readme = "README.md"
license = "Apache-2.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "fitters",
]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[project.optional-dependencies]
jax = ["jax>=0.4.20", "jaxlib>=0.4.20", "numpyro>=0.13.2", "scipy>=1.9", "numpy<2", "diffrax", "jaxopt"]
dev = ["pytest", "ruff", "black"]
